# Bet-Service

./: README.md  docker-compose.yml
bet_maker/: .env  Dockerfile  config.py  db.py  docker-compose.yml  main.py  pyproject.toml  rabbit_worker.py
bet_maker/src/: models.py
bet_maker/src/bets/: callbacks.py  constants.py  exceptions.py  managers.py  message_handlers.py  models.py  provider_integration.py  routes.py  schemas.py  services.py
bet_maker/src/event_bus/: rabbit_consumer.py  schemas.py
bet_maker/src/utils/: __init__.py  abstract_response.py  api_exceptions.py  error_handler.py  exceptions.py  fetcher.py
bet_maker/tests/: conftest.py  test_bets.py
line_provider/: .env  Dockerfile  config.py  main.py  pyproject.toml  utils.py
line_provider/src/: callbacks.py  exceptions.py  routes.py  schemas.py  services.py  utils.py
line_provider/src/event_bus/: rabbit_producer.py  schemas.py
line_provider/tests/: conftest.py  test_event.py
