[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["pashkan111 <kozhevnikov0001@yandex.ru>"]
readme = "README.md"
packages = [{include = "bet_maker"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.6"
aiohttp = "^3.8.4"
aiohttp-retry = "^2.8.3"
uvicorn = "^0.21.0"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"
aio-pika = "^9.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
