[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = ""
authors = ["pashkan111 <kozhevnikov0001@yandex.ru>"]
readme = "README.md"
packages = [{include = "line_provider"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.5.post1"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
