[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = ""
authors = ["pashkan111 <kozhevnikov0001@yandex.ru>"]
readme = "README.md"
packages = [{include = "line_provider"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.5.post1"
httpx = "^0.23.3"
aiohttp = "^3.8.4"
aiohttp-retry = "^2.8.3"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
